1
в”Њв”Ђв”Ђ(venv)в”Ђ(jeswinг‰їkali)-[~/ai-pentest-lab]
в””в”Ђ$ python app.py
  File "/home/jeswin/ai-pentest-lab/app.py", line 426
    return {"message": "PDF generated", "file": pdf_path}
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'return' outside function
